--- a/genindex.html
+++ b/genindex.html
@@ -390,6 +390,8 @@ title="Fullscreen mode"
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="wfl.generate_configs.html#wfl.generate_configs.utils.config_type_append">config_type_append() (in module wfl.generate_configs.utils)</a>
+</li>
       <li><a href="wfl.utils.html#wfl.utils.params.Params.cur_iter">cur_iter (wfl.utils.params.Params property)</a>
 </li>
   </ul></td>
@@ -478,11 +480,17 @@ title="Fullscreen mode"
 </li>
         <li><a href="wfl.fit.modify_database.html#module-wfl.fit.modify_database">wfl.fit.modify_database</a>
 </li>
+        <li><a href="wfl.generate_configs.html#module-wfl.generate_configs">wfl.generate_configs</a>
+</li>
+        <li><a href="wfl.generate_configs.html#module-wfl.generate_configs.utils">wfl.generate_configs.utils</a>
+</li>
         <li><a href="wfl.html#module-wfl.mpipool_support">wfl.mpipool_support</a>
 </li>
         <li><a href="wfl.plotting.html#module-wfl.plotting">wfl.plotting</a>
 </li>
         <li><a href="wfl.reactions_processing.html#module-wfl.reactions_processing">wfl.reactions_processing</a>
+</li>
+        <li><a href="wfl.select_configs.html#module-wfl.select_configs">wfl.select_configs</a>
 </li>
         <li><a href="wfl.utils.html#module-wfl.utils">wfl.utils</a>
 </li>
@@ -596,6 +604,20 @@ title="Fullscreen mode"
 </li>
       </ul></li>
       <li>
+    wfl.generate_configs
+
+      <ul>
+        <li><a href="wfl.generate_configs.html#module-wfl.generate_configs">module</a>
+</li>
+      </ul></li>
+      <li>
+    wfl.generate_configs.utils
+
+      <ul>
+        <li><a href="wfl.generate_configs.html#module-wfl.generate_configs.utils">module</a>
+</li>
+      </ul></li>
+      <li>
     wfl.mpipool_support
 
       <ul>
@@ -616,6 +638,13 @@ title="Fullscreen mode"
 
       <ul>
         <li><a href="wfl.reactions_processing.html#module-wfl.reactions_processing">module</a>
+</li>
+      </ul></li>
+      <li>
+    wfl.select_configs
+
+      <ul>
+        <li><a href="wfl.select_configs.html#module-wfl.select_configs">module</a>
 </li>
       </ul></li>
       <li>
