--- a/operations.generating_configs.html
+++ b/operations.generating_configs.html
@@ -420,7 +420,8 @@ title="Print to PDF"
 <li><p>Optimisation and <code class="docutils literal notranslate"><span class="pre">minim.py</span></code></p></li>
 <li><p>MD and <code class="docutils literal notranslate"><span class="pre">md.py</span></code></p></li>
 <li><p>Smiles to <code class="docutils literal notranslate"><span class="pre">ase.Atoms</span></code> in <code class="docutils literal notranslate"><span class="pre">smiles.py</span></code></p></li>
-<li><p>the rest in wfl.generate</p></li>
+<li><p>CUR code (n.b. descriptor normalisation)</p></li>
+<li><p>the rest in wfl.generate_configs</p></li>
 </ul>
 </div>
 
