--- a/operations.selecting_configs.html
+++ b/operations.selecting_configs.html
@@ -421,7 +421,7 @@ title="Print to PDF"
 <li><p>flat histogram</p></li>
 <li><p>CUR</p></li>
 <li><p>FPS</p></li>
-<li><p>everything in wfl.select</p></li>
+<li><p>everything in wfl.select_configs</p></li>
 </ul>
 </div>
 
