deploy: 60a4b98e4a54e3a8a67491a49f852fdd7d901cde

--- a/genindex.html
+++ b/genindex.html
@@ -471,6 +471,10 @@ title="Fullscreen mode"
 </li>
         <li><a href="wfl.fit.modify_database.html#module-wfl.fit.modify_database">wfl.fit.modify_database</a>
 </li>
+        <li><a href="wfl.plotting.html#module-wfl.plotting">wfl.plotting</a>
+</li>
+        <li><a href="wfl.reactions_processing.html#module-wfl.reactions_processing">wfl.reactions_processing</a>
+</li>
         <li><a href="wfl.utils.html#module-wfl.utils">wfl.utils</a>
 </li>
         <li><a href="wfl.utils.html#module-wfl.utils.file_utils">wfl.utils.file_utils</a>
@@ -567,8 +571,22 @@ title="Fullscreen mode"
         <li><a href="wfl.fit.modify_database.html#module-wfl.fit.modify_database">module</a>
 </li>
       </ul></li>
+      <li>
+    wfl.plotting
+
+      <ul>
+        <li><a href="wfl.plotting.html#module-wfl.plotting">module</a>
+</li>
+      </ul></li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li>
+    wfl.reactions_processing
+
+      <ul>
+        <li><a href="wfl.reactions_processing.html#module-wfl.reactions_processing">module</a>
+</li>
+      </ul></li>
       <li>
     wfl.utils
 
