deploy: 05060ac0bc8759a10b09e7f817d5bbeff91267e5

--- a/examples.md.html
+++ b/examples.md.html
@@ -586,7 +586,7 @@ title="Print to PDF"
         <span class="n">output_files</span><span class="p">[</span><span class="n">fname_in</span><span class="p">]</span> <span class="o">=</span> <span class="n">fname_out</span>
         <span class="n">write</span><span class="p">(</span><span class="n">fname_in</span><span class="p">,</span> <span class="n">at</span><span class="p">)</span>
 
-    <span class="n">ci</span> <span class="o">=</span> <span class="n">ConfigSet_in</span><span class="p">(</span><span class="n">input_files</span><span class="o">=</span><span class="n">input_files</span><span class="p">)</span>
+    <span class="n">ci</span> <span class="o">=</span> <span class="n">ConfigSet</span><span class="p">(</span><span class="n">input_files</span><span class="o">=</span><span class="n">input_files</span><span class="p">)</span>
     <span class="n">co</span> <span class="o">=</span> <span class="n">OutputSpec</span><span class="p">(</span>
         <span class="n">output_files</span><span class="o">=</span><span class="n">output_files</span><span class="p">,</span>
         <span class="n">all_or_none</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span> 
