deploy: 6ef9e19a74e0109f1b381cdee329c1a6ab949cfa

--- a/first_example.html
+++ b/first_example.html
@@ -32,7 +32,7 @@
     <script src="_static/scripts/sphinx-book-theme.js?digest=f31d14ad54b65d19161ba51d4ffff3a77ae00456"></script>
     <link rel="index" title="Index" href="genindex.html" />
     <link rel="search" title="Search" href="search.html" />
-    <link rel="next" title="Code structure" href="overview.html" />
+    <link rel="next" title="Overall design" href="overview.html" />
     <link rel="prev" title="Welcome to Workflow’s documentation!" href="index.html" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="docsearch:language" content="None">
@@ -526,7 +526,7 @@ title="Print to PDF"
     <a class='right-next' id="next-link" href="overview.html" title="next page">
     <div class="prev-next-info">
         <p class="prev-next-subtitle">next</p>
-        <p class="prev-next-title">Code structure</p>
+        <p class="prev-next-title">Overall design</p>
     </div>
     <i class="fas fa-angle-right"></i>
     </a>
