deploy: 0a062e9e23059c20422f7dadc511202f4e663cff

--- a/genindex.html
+++ b/genindex.html
@@ -1172,13 +1172,15 @@ title="Fullscreen mode"
 </li>
       <li><a href="wfl.generate.html#wfl.generate.supercells.antisite_autopara_wrappable">antisite_autopara_wrappable() (in module wfl.generate.supercells)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="wfl.utils.html#wfl.utils.at_copy_save_results.at_copy_save_results">at_copy_save_results() (in module wfl.utils.at_copy_save_results)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="wfl.utils.html#wfl.utils.misc.atoms_to_list">atoms_to_list() (in module wfl.utils.misc)</a>
 </li>
       <li><a href="wfl.autoparallelize.html#wfl.autoparallelize.base.autoparallelize">autoparallelize() (in module wfl.autoparallelize.base)</a>
+</li>
+      <li><a href="wfl.autoparallelize.html#wfl.autoparallelize.base.autoparallelize_docstring">autoparallelize_docstring() (in module wfl.autoparallelize.base)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -1424,8 +1426,6 @@ title="Fullscreen mode"
 <h2 id="I">I</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="wfl.autoparallelize.html#wfl.autoparallelize.base.iloop">iloop() (in module wfl.autoparallelize.base)</a>
-</li>
       <li><a href="wfl.utils.html#wfl.utils.params.Params.implemented_calculators">implemented_calculators (wfl.utils.params.Params attribute)</a>
 </li>
       <li><a href="wfl.calculators.orca.html#wfl.calculators.orca.basinhopping.BasinHoppingORCA.implemented_properties">implemented_properties (wfl.calculators.orca.basinhopping.BasinHoppingORCA attribute)</a>
