--- a/wfl.select.html
+++ b/wfl.select.html
@@ -827,7 +827,7 @@ Repeated values will lead to multiple copies of configuration</p></li>
 </dl>
 <p class="rubric">Notes</p>
 <p>This routine depends on details of ConfigSet and OutputSpec,
-so perhaps belongs as a use case of iterable_loop, but since it can return
+so perhaps belongs as a use case of autoparallelize, but since it can return
 multiple outputs for a single input, this cannot be done right now</p>
 </dd></dl>
 
