--- a/examples.md.html
+++ b/examples.md.html
@@ -20,7 +20,7 @@
     href="_static/vendor/fontawesome/5.13.0/webfonts/fa-brands-400.woff2">
 
     <link rel="stylesheet" type="text/css" href="_static/pygments.css" />
-    <link rel="stylesheet" href="_static/styles/sphinx-book-theme.css?digest=62ba249389abaaa9ffc34bf36a076bdc1d65ee18" type="text/css" />
+    <link rel="stylesheet" href="_static/styles/sphinx-book-theme.css?digest=5115cc725059bd94278eecd172e13a965bf8f5a9" type="text/css" />
     
   <!-- Pre-loaded scripts that we'll load fully later -->
   <link rel="preload" as="script" href="_static/scripts/pydata-sphinx-theme.js?digest=1999514e3f237ded88cf">
@@ -29,7 +29,7 @@
     <script src="_static/jquery.js"></script>
     <script src="_static/underscore.js"></script>
     <script src="_static/doctools.js"></script>
-    <script src="_static/scripts/sphinx-book-theme.js?digest=f31d14ad54b65d19161ba51d4ffff3a77ae00456"></script>
+    <script src="_static/scripts/sphinx-book-theme.js?digest=9c920249402e914e316237a7dbc6769907cce411"></script>
     <link rel="index" title="Index" href="genindex.html" />
     <link rel="search" title="Search" href="search.html" />
     <link rel="next" title="wfl" href="modules.html" />
@@ -602,13 +602,13 @@ title="Print to PDF"
         <span class="s2">&quot;scheduler&quot;</span><span class="p">:</span> <span class="s2">&quot;slurm&quot;</span><span class="p">,</span>
         <span class="s2">&quot;commands&quot;</span><span class="p">:</span> <span class="p">[</span><span class="s2">&quot;source /work/e89/e89/eg475/.bashrc&quot;</span><span class="p">,</span>  <span class="s2">&quot;echo $(date)&quot;</span><span class="p">,</span> <span class="s2">&quot;hostname&quot;</span><span class="p">],</span>
         <span class="s2">&quot;header&quot;</span><span class="p">:</span> <span class="p">[</span><span class="s2">&quot;#SBATCH --nodes=</span><span class="si">{nnodes}</span><span class="s2">&quot;</span><span class="p">,</span>
-                   <span class="s2">&quot;#SBATCH --tasks-per-node=</span><span class="si">{ncores_per_node}</span><span class="s2">&quot;</span><span class="p">,</span>
+                   <span class="s2">&quot;#SBATCH --tasks-per-node=</span><span class="si">{num_cores_per_node}</span><span class="s2">&quot;</span><span class="p">,</span>
                    <span class="s2">&quot;#SBATCH --cpus-per-task=1&quot;</span><span class="p">,</span>
                    <span class="s2">&quot;#SBATCH --account=change-me&quot;</span><span class="p">,</span>
                    <span class="s2">&quot;#SBATCH --qos=standard&quot;</span><span class="p">],</span>
                 <span class="s2">&quot;rundir&quot;</span><span class="p">:</span> <span class="s2">&quot;/work/e89/e89/eg475/expyre_rundir&quot;</span><span class="p">,</span>
-        <span class="s2">&quot;partitions&quot;</span><span class="p">:</span> <span class="p">{</span><span class="s2">&quot;standard&quot;</span> <span class="p">:</span> <span class="p">{</span><span class="s2">&quot;ncores&quot;</span><span class="p">:</span> <span class="mi">128</span><span class="p">,</span> <span class="s2">&quot;max_time&quot;</span> <span class="p">:</span> <span class="s2">&quot;24h&quot;</span><span class="p">,</span> <span class="s2">&quot;max_mem&quot;</span><span class="p">:</span> <span class="s2">&quot;256G&quot;</span><span class="p">},</span>
-                       <span class="s2">&quot;highmem&quot;</span> <span class="p">:</span> <span class="p">{</span><span class="s2">&quot;ncores&quot;</span><span class="p">:</span> <span class="mi">128</span><span class="p">,</span> <span class="s2">&quot;max_time&quot;</span> <span class="p">:</span> <span class="s2">&quot;24h&quot;</span><span class="p">,</span> <span class="s2">&quot;max_mem&quot;</span><span class="p">:</span> <span class="s2">&quot;512G&quot;</span><span class="p">}}</span>
+        <span class="s2">&quot;partitions&quot;</span><span class="p">:</span> <span class="p">{</span><span class="s2">&quot;standard&quot;</span> <span class="p">:</span> <span class="p">{</span><span class="s2">&quot;num_cores&quot;</span><span class="p">:</span> <span class="mi">128</span><span class="p">,</span> <span class="s2">&quot;max_time&quot;</span> <span class="p">:</span> <span class="s2">&quot;24h&quot;</span><span class="p">,</span> <span class="s2">&quot;max_mem&quot;</span><span class="p">:</span> <span class="s2">&quot;256G&quot;</span><span class="p">},</span>
+                       <span class="s2">&quot;highmem&quot;</span> <span class="p">:</span> <span class="p">{</span><span class="s2">&quot;num_cores&quot;</span><span class="p">:</span> <span class="mi">128</span><span class="p">,</span> <span class="s2">&quot;max_time&quot;</span> <span class="p">:</span> <span class="s2">&quot;24h&quot;</span><span class="p">,</span> <span class="s2">&quot;max_mem&quot;</span><span class="p">:</span> <span class="s2">&quot;512G&quot;</span><span class="p">}}</span>
                  <span class="p">}</span>
 <span class="p">}}</span>
 
