--- a/genindex.html
+++ b/genindex.html
@@ -20,7 +20,7 @@
     href="_static/vendor/fontawesome/5.13.0/webfonts/fa-brands-400.woff2">
 
     <link rel="stylesheet" type="text/css" href="_static/pygments.css" />
-    <link rel="stylesheet" href="_static/styles/sphinx-book-theme.css?digest=62ba249389abaaa9ffc34bf36a076bdc1d65ee18" type="text/css" />
+    <link rel="stylesheet" href="_static/styles/sphinx-book-theme.css?digest=5115cc725059bd94278eecd172e13a965bf8f5a9" type="text/css" />
     
   <!-- Pre-loaded scripts that we'll load fully later -->
   <link rel="preload" as="script" href="_static/scripts/pydata-sphinx-theme.js?digest=1999514e3f237ded88cf">
@@ -29,7 +29,7 @@
     <script src="_static/jquery.js"></script>
     <script src="_static/underscore.js"></script>
     <script src="_static/doctools.js"></script>
-    <script src="_static/scripts/sphinx-book-theme.js?digest=f31d14ad54b65d19161ba51d4ffff3a77ae00456"></script>
+    <script src="_static/scripts/sphinx-book-theme.js?digest=9c920249402e914e316237a7dbc6769907cce411"></script>
     <link rel="index" title="Index" href="#" />
     <link rel="search" title="Search" href="search.html" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -1402,7 +1402,7 @@ title="Fullscreen mode"
 </li>
       <li><a href="wfl.fit.html#wfl.fit.ref_error.get_properties">get_properties() (in module wfl.fit.ref_error)</a>
 </li>
-      <li><a href="wfl.fit.html#wfl.fit.utils.get_RemoteInfo">get_RemoteInfo() (in module wfl.fit.utils)</a>
+      <li><a href="wfl.autoparallelize.html#wfl.autoparallelize.utils.get_remote_info">get_remote_info() (in module wfl.autoparallelize.utils)</a>
 </li>
       <li><a href="wfl.utils.html#wfl.utils.version.get_wfl_version">get_wfl_version() (in module wfl.utils.version)</a>
 </li>
