deploy: 18052f5f3e812f626ecc66fdf6bd4f201d7c175a

--- a/genindex.html
+++ b/genindex.html
@@ -432,7 +432,6 @@ title="Fullscreen mode"
  | <a href="#N"><strong>N</strong></a>
  | <a href="#O"><strong>O</strong></a>
  | <a href="#P"><strong>P</strong></a>
- | <a href="#Q"><strong>Q</strong></a>
  | <a href="#R"><strong>R</strong></a>
  | <a href="#S"><strong>S</strong></a>
  | <a href="#T"><strong>T</strong></a>
@@ -1218,9 +1217,11 @@ title="Fullscreen mode"
 </li>
       <li><a href="wfl.utils.html#wfl.utils.ndim_neighbor_list.calc_list_cells">calc_list_cells() (in module wfl.utils.ndim_neighbor_list)</a>
 </li>
-      <li><a href="wfl.calculators.orca.html#wfl.calculators.orca.basinhopping.BasinHoppingORCA.calculate">calculate() (wfl.calculators.orca.basinhopping.BasinHoppingORCA method)</a>
+      <li><a href="wfl.calculators.html#wfl.calculators.espresso.Espresso.calculate">calculate() (wfl.calculators.espresso.Espresso method)</a>
 
       <ul>
+        <li><a href="wfl.calculators.orca.html#wfl.calculators.orca.basinhopping.BasinHoppingORCA.calculate">(wfl.calculators.orca.basinhopping.BasinHoppingORCA method)</a>
+</li>
         <li><a href="wfl.calculators.orca.html#wfl.calculators.orca.ORCA.calculate">(wfl.calculators.orca.ORCA method)</a>
 </li>
       </ul></li>
@@ -1234,8 +1235,12 @@ title="Fullscreen mode"
 </li>
       <li><a href="wfl.calculators.html#wfl.calculators.utils.clean_rundir">clean_rundir() (in module wfl.calculators.utils)</a>
 </li>
-      <li><a href="wfl.calculators.orca.html#wfl.calculators.orca.ORCA.cleanup">cleanup() (wfl.calculators.orca.ORCA method)</a>
+      <li><a href="wfl.calculators.html#wfl.calculators.espresso.Espresso.cleanup">cleanup() (wfl.calculators.espresso.Espresso method)</a>
+
+      <ul>
+        <li><a href="wfl.calculators.orca.html#wfl.calculators.orca.ORCA.cleanup">(wfl.calculators.orca.ORCA method)</a>
 </li>
+      </ul></li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="wfl.select.html#wfl.select.selection_space.compare_manual_minima">compare_manual_minima() (in module wfl.select.selection_space)</a>
@@ -1272,8 +1277,12 @@ title="Fullscreen mode"
 <h2 id="D">D</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="wfl.calculators.orca.html#wfl.calculators.orca.ORCA.default_parameters">default_parameters (wfl.calculators.orca.ORCA attribute)</a>
+      <li><a href="wfl.calculators.html#wfl.calculators.espresso.Espresso.default_parameters">default_parameters (wfl.calculators.espresso.Espresso attribute)</a>
+
+      <ul>
+        <li><a href="wfl.calculators.orca.html#wfl.calculators.orca.ORCA.default_parameters">(wfl.calculators.orca.ORCA attribute)</a>
 </li>
+      </ul></li>
       <li><a href="wfl.generate.html#wfl.generate.vib.Vibrations.derive_normal_mode_info">derive_normal_mode_info() (wfl.generate.vib.Vibrations method)</a>
 </li>
       <li><a href="wfl.html#wfl.descriptor_heuristics.descriptor_2brn_uniform_file">descriptor_2brn_uniform_file() (in module wfl.descriptor_heuristics)</a>
@@ -1310,13 +1319,13 @@ title="Fullscreen mode"
 </li>
       <li><a href="wfl.fit.html#wfl.fit.ref_error.err_from_calculated_ats">err_from_calculated_ats() (in module wfl.fit.ref_error)</a>
 </li>
+      <li><a href="wfl.calculators.html#wfl.calculators.espresso.Espresso">Espresso (class in wfl.calculators.espresso)</a>
+</li>
       <li><a href="wfl.generate.html#wfl.generate.vib.Vibrations.evals_to_freqs">evals_to_freqs() (wfl.generate.vib.Vibrations static method)</a>
 </li>
       <li><a href="wfl.calculators.html#wfl.calculators.castep.evaluate_autopara_wrappable">evaluate_autopara_wrappable() (in module wfl.calculators.castep)</a>
 
       <ul>
-        <li><a href="wfl.calculators.html#wfl.calculators.espresso.evaluate_autopara_wrappable">(in module wfl.calculators.espresso)</a>
-</li>
         <li><a href="wfl.calculators.html#wfl.calculators.vasp.evaluate_autopara_wrappable">(in module wfl.calculators.vasp)</a>
 </li>
       </ul></li>
@@ -1428,9 +1437,11 @@ title="Fullscreen mode"
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="wfl.utils.html#wfl.utils.params.Params.implemented_calculators">implemented_calculators (wfl.utils.params.Params attribute)</a>
 </li>
-      <li><a href="wfl.calculators.orca.html#wfl.calculators.orca.basinhopping.BasinHoppingORCA.implemented_properties">implemented_properties (wfl.calculators.orca.basinhopping.BasinHoppingORCA attribute)</a>
+      <li><a href="wfl.calculators.html#wfl.calculators.espresso.Espresso.implemented_properties">implemented_properties (wfl.calculators.espresso.Espresso attribute)</a>
 
       <ul>
+        <li><a href="wfl.calculators.orca.html#wfl.calculators.orca.basinhopping.BasinHoppingORCA.implemented_properties">(wfl.calculators.orca.basinhopping.BasinHoppingORCA attribute)</a>
+</li>
         <li><a href="wfl.calculators.orca.html#wfl.calculators.orca.ORCA.implemented_properties">(wfl.calculators.orca.ORCA attribute)</a>
 </li>
       </ul></li>
@@ -1757,14 +1768,6 @@ title="Fullscreen mode"
   </ul></td>
 </tr></table>
 
-<h2 id="Q">Q</h2>
-<table style="width: 100%" class="indextable genindextable"><tr>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="wfl.calculators.html#wfl.calculators.espresso.qe_kpoints_and_kwargs">qe_kpoints_and_kwargs() (in module wfl.calculators.espresso)</a>
-</li>
-  </ul></td>
-</tr></table>
-
 <h2 id="R">R</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
@@ -1841,6 +1844,8 @@ title="Fullscreen mode"
       <li><a href="wfl.select.html#wfl.select.convex_hull.select">select() (in module wfl.select.convex_hull)</a>
 </li>
       <li><a href="wfl.cli.html#wfl.cli.gap_rss_iter_fit.select_fitting_and_testing_for_groups">select_fitting_and_testing_for_groups() (in module wfl.cli.gap_rss_iter_fit)</a>
+</li>
+      <li><a href="wfl.calculators.html#wfl.calculators.espresso.Espresso.setup_params_for_this_calc">setup_params_for_this_calc() (wfl.calculators.espresso.Espresso method)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
