deploy: 58091cd43d9a5201af8e3e1b1afed5a547d13ab1

--- a/genindex.html
+++ b/genindex.html
@@ -615,10 +615,10 @@ title="Fullscreen mode"
 </li>
       </ul></li>
       <li>
-    --gap-fit-exec
+    --gap-fit-command
 
       <ul>
-        <li><a href="command_line.automatic_docs.html#cmdoption-wfl-fitting-simple-gap-gap-fit-exec">wfl-fitting-simple-gap command line option</a>
+        <li><a href="command_line.automatic_docs.html#cmdoption-wfl-fitting-simple-gap-gap-fit-command">wfl-fitting-simple-gap command line option</a>
 </li>
       </ul></li>
       <li>
@@ -2030,7 +2030,7 @@ title="Fullscreen mode"
 </li>
         <li><a href="command_line.automatic_docs.html#cmdoption-wfl-fitting-simple-gap-g">--gap-file</a>
 </li>
-        <li><a href="command_line.automatic_docs.html#cmdoption-wfl-fitting-simple-gap-gap-fit-exec">--gap-fit-exec</a>
+        <li><a href="command_line.automatic_docs.html#cmdoption-wfl-fitting-simple-gap-gap-fit-command">--gap-fit-command</a>
 </li>
         <li><a href="command_line.automatic_docs.html#cmdoption-wfl-fitting-simple-gap-o">--output-file</a>
 </li>
