deploy: 30d5706d66a5838c90d7d8379e29012cc0a56dc0

--- a/genindex.html
+++ b/genindex.html
@@ -1180,6 +1180,8 @@ title="Fullscreen mode"
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="wfl.generate.html#wfl.generate.minimahopping.atom_opt_hopping">atom_opt_hopping() (in module wfl.generate.minimahopping)</a>
+</li>
       <li><a href="wfl.utils.html#wfl.utils.misc.atoms_to_list">atoms_to_list() (in module wfl.utils.misc)</a>
 </li>
       <li><a href="wfl.autoparallelize.html#wfl.autoparallelize.base.autoparallelize">autoparallelize() (in module wfl.autoparallelize.base)</a>
@@ -1639,6 +1641,8 @@ title="Fullscreen mode"
 </li>
         <li><a href="wfl.generate.html#module-wfl.generate.md">wfl.generate.md</a>
 </li>
+        <li><a href="wfl.generate.html#module-wfl.generate.minimahopping">wfl.generate.minimahopping</a>
+</li>
         <li><a href="wfl.generate.html#module-wfl.generate.optimize">wfl.generate.optimize</a>
 </li>
         <li><a href="wfl.generate.html#module-wfl.generate.phonopy">wfl.generate.phonopy</a>
@@ -1801,6 +1805,8 @@ title="Fullscreen mode"
       <ul>
         <li><a href="wfl.generate.html#wfl.generate.buildcell.run">(in module wfl.generate.buildcell)</a>
 </li>
+        <li><a href="wfl.generate.html#wfl.generate.minimahopping.run">(in module wfl.generate.minimahopping)</a>
+</li>
         <li><a href="wfl.generate.html#wfl.generate.optimize.run">(in module wfl.generate.optimize)</a>
 </li>
         <li><a href="wfl.generate.html#wfl.generate.phonopy.run">(in module wfl.generate.phonopy)</a>
@@ -1816,6 +1822,8 @@ title="Fullscreen mode"
 
       <ul>
         <li><a href="wfl.generate.html#wfl.generate.buildcell.run_autopara_wrappable">(in module wfl.generate.buildcell)</a>
+</li>
+        <li><a href="wfl.generate.html#wfl.generate.minimahopping.run_autopara_wrappable">(in module wfl.generate.minimahopping)</a>
 </li>
         <li><a href="wfl.generate.html#wfl.generate.optimize.run_autopara_wrappable">(in module wfl.generate.optimize)</a>
 </li>
@@ -2280,8 +2288,6 @@ title="Fullscreen mode"
         <li><a href="command_line.automatic_docs.html#cmdoption-wfl-ref-method-vasp-eval-arg-INPUTS">INPUTS</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     wfl-select-configs-CUR-global command line option
 
@@ -2307,6 +2313,8 @@ title="Fullscreen mode"
         <li><a href="command_line.automatic_docs.html#cmdoption-wfl-select-configs-CUR-global-arg-INPUTS">INPUTS</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     wfl.autoparallelize
 
@@ -2606,6 +2614,13 @@ title="Fullscreen mode"
 
       <ul>
         <li><a href="wfl.generate.html#module-wfl.generate.md">module</a>
+</li>
+      </ul></li>
+      <li>
+    wfl.generate.minimahopping
+
+      <ul>
+        <li><a href="wfl.generate.html#module-wfl.generate.minimahopping">module</a>
 </li>
       </ul></li>
       <li>
