--- a/genindex.html
+++ b/genindex.html
@@ -1284,12 +1284,8 @@ title="Fullscreen mode"
 <h2 id="D">D</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="wfl.calculators.html#wfl.calculators.espresso.Espresso.default_parameters">default_parameters (wfl.calculators.espresso.Espresso attribute)</a>
-
-      <ul>
-        <li><a href="wfl.calculators.orca.html#wfl.calculators.orca.ORCA.default_parameters">(wfl.calculators.orca.ORCA attribute)</a>
+      <li><a href="wfl.calculators.orca.html#wfl.calculators.orca.ORCA.default_parameters">default_parameters (wfl.calculators.orca.ORCA attribute)</a>
 </li>
-      </ul></li>
       <li><a href="wfl.generate.html#wfl.generate.vib.Vibrations.derive_normal_mode_info">derive_normal_mode_info() (wfl.generate.vib.Vibrations method)</a>
 </li>
       <li><a href="wfl.html#wfl.descriptor_heuristics.descriptor_2brn_uniform_file">descriptor_2brn_uniform_file() (in module wfl.descriptor_heuristics)</a>
@@ -2840,6 +2836,8 @@ title="Fullscreen mode"
         <li><a href="wfl.utils.html#module-wfl.utils.vol_composition_space">module</a>
 </li>
       </ul></li>
+      <li><a href="wfl.calculators.html#wfl.calculators.espresso.Espresso.wfl_generic_def_autopara_info">wfl_generic_def_autopara_info (wfl.calculators.espresso.Espresso attribute)</a>
+</li>
       <li><a href="wfl.html#wfl.configset.OutputSpec.write">write() (wfl.configset.OutputSpec method)</a>
 </li>
       <li><a href="wfl.calculators.orca.html#wfl.calculators.orca.ORCA.write_input">write_input() (wfl.calculators.orca.ORCA method)</a>
